--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Happy Birthday!</title>
+  <title>Artiani The Day!</title>
 
   <link rel="stylesheet" href="styles/flexbox-center-container.css" media="all">
   <link rel="stylesheet" href="styles/system-fonts.css" media="all">
   <link rel="stylesheet" href="styles/style.css" media="all">
+  <link rel="icon" href="./OIP.jpeg" type="image/x-icon" />
 </head>
 <body>
   <audio id="birthdaySong" src="./Jamrud_-_Selamat_Ulang_Tahun.mp3" preload="auto"></audio>
