--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <h4 class="color1">Selamat Ulang Tahun</h4> 
         <h2 class="color2 margin"></h2> <br>
         <h6 class="color2 margin"></h6>
-          <p>Hari ini gua cuma mau bilang: jangan terlalu senang! Umurmu memang bertambah, tapi itu berarti jatah hidup makin berkurang. 😜</p><br>
-          <p>Kalau ada yang bilang tambah tua, jangan dengerin! Itu cuma angka. Tapi ya, jangan lupa beli skincare biar muka lu enggak ikut tua. ✨</p><br>
-          <p>Semoga kebahagiaan dan mie gacoan selalu ada di hidupmu. Dan yang paling penting: semoga tahun ini pacar enggak cuma di wishlist! 😂</p> <br>
-          <p class="text-right">untuk Tandean</p><br>
-          <p class="text-right">Dari Kemaren capek gua bikinnya</p>
+          <p>Eid milad saeed, Bestiee 🎉 Selamat atas bertambahnya usia dan berkurangnya garansi pabrik. 😂</p><br>
+          <p>Jangan sedih kalau dibilang tua. Tua itu pasti, dewasa itu opsional. Jadi santai aja, kayak cicilan yang nggak pernah lunas. 💸</p><br>
+          <p>Doa terbaik: semoga rezeki deras kayak hujan pas mau jemuran, masalah tipis kayak alis yang kebanyakan dicukur, dan touring enggak cuma wacana. </p> <br>
+          <p class="text-right">untuk Dondong</p><br>
+          <p class="text-right">Dari barusan gua bikinnya</p>
       </div> 
     </div>
   </div>
