--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Artiani The Day!</title>
+  <title>DINDONG The Day!</title>
 
   <link rel="stylesheet" href="styles/flexbox-center-container.css" media="all">
   <link rel="stylesheet" href="styles/system-fonts.css" media="all">
@@ -47,12 +47,12 @@
           <h5>CLICK ME!</h5>
       </div>
       <div class="details">
-        <h4 class="color1">Selamat Ulang Tahun</h4> 
+        <h4 class="color1">Eid milad saeed, Bestiee</h4> 
         <h2 class="color2 margin"></h2> <br>
         <h6 class="color2 margin"></h6>
-          <p>Eid milad saeed, Bestiee 🎉 Selamat atas bertambahnya usia dan berkurangnya garansi pabrik. 😂</p><br>
+          <p>Selamat atas bertambahnya usia dan berkurangnya garansi pabrik. 😂</p><br>
           <p>Jangan sedih kalau dibilang tua. Tua itu pasti, dewasa itu opsional. Jadi santai aja, kayak cicilan yang nggak pernah lunas. 💸</p><br>
-          <p>Doa terbaik: semoga rezeki deras kayak hujan pas mau jemuran, masalah tipis kayak alis yang kebanyakan dicukur, dan touring enggak cuma wacana. </p> <br>
+          <p>Doa terbaik: semoga rezeki deras kayak hujan pas mau jemuran, masalah tipis kayak alis yang kebanyakan dicukur, dan touring enggak cuma wacana. 🤌</p> <br>
           <p class="text-right">untuk Dondong</p><br>
           <p class="text-right">Dari barusan gua bikinnya</p>
       </div> 
