--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p>Selamat atas bertambahnya usia dan berkurangnya garansi pabrik. 😂</p><br>
           <p>Jangan sedih kalau dibilang tua. Tua itu pasti, dewasa itu opsional. Jadi santai aja, kayak cicilan yang nggak pernah lunas. 💸</p><br>
           <p>Doa terbaik: semoga rezeki deras kayak hujan pas mau jemuran, masalah tipis kayak alis yang kebanyakan dicukur, dan touring enggak cuma wacana. 🤌</p> <br>
-          <p class="text-right">untuk Dondong</p><br>
+          <p class="text-right">untuk Dindong</p><br>
           <p class="text-right">Dari barusan gua bikinnya</p>
       </div> 
     </div>
